# Master-Ynov

./: readme.md
backend_api/: .gitignore  Cargo.toml  docker-compose.yml
backend_api/prisma/: schema.prisma
backend_api/prisma-cli/: Cargo.toml
backend_api/prisma/migrations/20231123095640_first_migration/: migration.sql
backend_api/src/: main.rs  prisma.rs  user.rs
