[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
serde_json = { workspace = true }
